; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/winmm/extr_mci.c_MCI_GetDevTypeFromFileName.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/winmm/extr_mci.c_MCI_GetDevTypeFromFileName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MCI_GetDevTypeFromFileName.keyW = internal constant [60 x i8] c"SOFTWARE\\Microsoft\\Windows NT\\CurrentVersion\\MCI Extensions\00", align 16
@HKEY_LOCAL_MACHINE = common dso_local global i32 0, align 4
@KEY_QUERY_VALUE = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [43 x i8] c"No ...\\MCI Extensions entry for %s found.\0A\00", align 1
@MCIERR_EXTENSION_NOT_FOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64, i64, i32)* @MCI_GetDevTypeFromFileName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @MCI_GetDevTypeFromFileName(i64 %0, i64 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i32 %2, i32* %7, align 4
  %12 = load i64, i64* %5, align 8
  %13 = call i64 @strrchrW(i64 %12, i8 signext 46)
  store i64 %13, i64* %8, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %40

15:                                               ; preds = %3
  %16 = load i32, i32* @HKEY_LOCAL_MACHINE, align 4
  %17 = load i32, i32* @KEY_QUERY_VALUE, align 4
  %18 = call i64 @RegOpenKeyExW(i32 %16, i8* getelementptr inbounds ([60 x i8], [60 x i8]* @MCI_GetDevTypeFromFileName.keyW, i64 0, i64 0), i32 0, i32 %17, i32* %9)
  %19 = load i64, i64* @ERROR_SUCCESS, align 8
  %20 = icmp eq i64 %18, %19
  br i1 %20, label %21, label %36

21:                                               ; preds = %15
  %22 = load i32, i32* %7, align 4
  store i32 %22, i32* %10, align 4
  %23 = load i32, i32* %9, align 4
  %24 = load i64, i64* %8, align 8
  %25 = add nsw i64 %24, 1
  %26 = load i64, i64* %6, align 8
  %27 = inttoptr i64 %26 to i8*
  %28 = call i64 @RegQueryValueExW(i32 %23, i64 %25, i32 0, i32 0, i8* %27, i32* %10)
  store i64 %28, i64* %11, align 8
  %29 = load i32, i32* %9, align 4
  %30 = call i32 @RegCloseKey(i32 %29)
  %31 = load i64, i64* %11, align 8
  %32 = load i64, i64* @ERROR_SUCCESS, align 8
  %33 = icmp eq i64 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %21
  store i32 0, i32* %4, align 4
  br label %42

35:                                               ; preds = %21
  br label %36

36:                                               ; preds = %35, %15
  %37 = load i64, i64* %8, align 8
  %38 = call i32 @debugstr_w(i64 %37)
  %39 = call i32 @TRACE(i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %38)
  br label %40

40:                                               ; preds = %36, %3
  %41 = load i32, i32* @MCIERR_EXTENSION_NOT_FOUND, align 4
  store i32 %41, i32* %4, align 4
  br label %42

42:                                               ; preds = %40, %34
  %43 = load i32, i32* %4, align 4
  ret i32 %43
}

declare dso_local i64 @strrchrW(i64, i8 signext) #1

declare dso_local i64 @RegOpenKeyExW(i32, i8*, i32, i32, i32*) #1

declare dso_local i64 @RegQueryValueExW(i32, i64, i32, i32, i8*, i32*) #1

declare dso_local i32 @RegCloseKey(i32) #1

declare dso_local i32 @TRACE(i8*, i32) #1

declare dso_local i32 @debugstr_w(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
